--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,8 +137,7 @@ jobs:
               --template-file .circleci/files/backend.yml \
               --tags project=udapeople \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
-            
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"        
       - run:
           name: Ensure front-end infrastructure exist
           command: |
@@ -164,7 +163,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["24:00:b3:17:72:a4:a5:2b:61:15:bf:83:1c:8e:12:8a"] 
+          fingerprints: ["07:c7:b4:df:33:69:30:b2:8c:76:23:c0:3a:21:21:08"] 
       - attach_workspace:
           at: ~/
       - run:
@@ -238,7 +237,7 @@ jobs:
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       - destroy-environment
-      - revert_migrations
+      - revert-migrations
 
   
     
