--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -198,7 +198,8 @@ jobs:
       - run:
           name: Run migrations
           command: |
-            cd  backend
+            cd backend
+            npm install
             npm run migrations:revert
             npm run migrations > migrations_dump.txt
       - run:
