--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,7 +1,7 @@
 ---
 
   - name: "configuration playbook." 
-    hosts: web
+    hosts: all
     user: ubuntu
     become: true
     become_method: sudo
