--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,8 +178,8 @@ jobs:
       - run:
           name: Run Playbook and Configure server
           command: |
-            ansible-playbook -i ./.circleci/ansible/inventory.txt .circleci/ansible/configure-server.yml
-      
+            cd .circleci/ansible
+            ansible-playbook -i inventory.txt  configure-server.yml      
       - destroy-environment
       - revert-migrations
 
